--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,11 @@
     <string name="app_name">CameraCameleon</string>
 
     <string name="test_url">https://media.npr.org/assets/img/2017/04/25/istock-115796521-fcf434f36d3d0865301cdcb9c996cfd80578ca99-s800-c85.jpg</string>
-
+    <string name="test_base_url">https://media.npr.org/</string>
+    <string name="test_end_point">assets/img/2017/04/25/</string>
+    <string name="test_filename">istock-115796521-fcf434f36d3d0865301cdcb9c996cfd80578ca99-s800-c85.jpg</string>
     <string name="btn_start_requests">Start Requests</string>
     <string name="intro">Enter IP for POCStreamer</string>
     <string name="sending_request">Sending request&#8230;</string>
+    <string name="btn_test">Test</string>
 </resources>
